Make `chatread` a library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "chatread"
 version = "0.0.1"
 authors = ["Tobias Bucher <tobiasbucher5991@gmail.com>"]
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 buffer = "0.1.8"
 libc = "0.2.43"
